[gd_scene load_steps=3 format=3 uid="uid://dhf86ljokx6ci"]

[ext_resource type="Script" path="res://game_logic/dock/map/map_icon.gd" id="1_qqw5s"]
[ext_resource type="Texture2D" uid="uid://bpignwdop5lde" path="res://assets/gui/map_icons/monster.png" id="2_2dci3"]

[node name="map_node" type="Node2D"]
script = ExtResource("1_qqw5s")

[node name="Sprite" type="Sprite2D" parent="."]
self_modulate = Color(0.12549, 0.12549, 0.12549, 1)
texture = ExtResource("2_2dci3")

[node name="MouseDetect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
metadata/_edit_lock_ = true

[connection signal="gui_input" from="MouseDetect" to="." method="_on_mouse_detect_gui_input"]
[connection signal="mouse_entered" from="MouseDetect" to="." method="_on_mouse_detect_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetect" to="." method="_on_mouse_detect_mouse_exited"]
